refactor: Use java List#of over Guava ImmutableList#of (#12806)